Fix spacing around portfolio

--- a/app/assets/stylesheets/creative.css
+++ b/app/assets/stylesheets/creative.css
@@ -457,7 +457,7 @@ ul.footer-icons {
 }
 
 #portfolio {
-  padding-top: 30px;
+  padding-bottom: 0px;
 }
 
 .input-text {
